All files added

--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 MONGO_URI='mongodb://mongo:27017/docker-node-mongo'
 NODE_LOCAL_PORT=3000
+KEY_1=50
+KEY_2=6172019
+KEY_3=24JaCoBye9
+KEY_4_hr=8
+KEY_4_min=53
+KEY_4_sec=17
+KEY_5=seekandyeshallreceive
+KEY_6=sense
+KEY_7=
+KEY_8=If you only do what you can do, you'll never be more than you are
